[package]
name = "natram"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.104",features=["derive"]}
serde_cbor = "0.10.2"
structopt = {default_features=false, version="0.3.7"}
slab = "0.4.2"
ttl_cache = "0.5.1"
serde_yaml = "0.8.11"
rand = "0.7.2"
unzip3 = "1.0.0"

[dependencies.tokio]
version="0.2.6"
default_features=false
features = [
    "rt-core",
    "rt-util",
    "udp",
    "time",
    "macros",
    "sync",
]
